--- a/web/css/home_style.css
+++ b/web/css/home_style.css
@@ -15,3 +15,24 @@ table a {
     vertical-align: middle;
     line-height: 2;
 }
+
+.file_info{
+    font-size: large;
+    line-height: 2;
+}
+
+.name-col {
+    width: 50%;
+}
+
+.modified-col {
+    width: 19%;
+}
+
+.size-col {
+    width: 13%;
+}
+
+.action-col {
+    width: 18%;
+}
