初步完成上传功能 为了个进度条整了一堆活 目前功能还没有完善(包括文件重复的检测)

--- a/web/css/home_style.css
+++ b/web/css/home_style.css
@@ -38,7 +38,8 @@ table a {
 }
 
 .breadcrumb {
-    border-radius: 0.375rem;
+    /*border-radius: 0.375rem;*/
+    margin-top: 16px;
 }
 
 .breadcrumb .breadcrumb-item {
