--- a/web/css/user-info.css
+++ b/web/css/user-info.css
@@ -60,7 +60,9 @@
     color: rgb(100, 96, 100);
     font-size: 0.95rem;
 }
-
+html[data-bs-theme="dark"] .login-info-dv .user-login-info-content {
+    color: inherit;
+}
 .accordion-item {
     margin-bottom: 5px;
     border-top: var(--bs-accordion-border-width) solid var(--bs-accordion-border-color) !important;
@@ -116,7 +118,9 @@
     font-size: 0.75rem;
     color: rgb(140, 139, 139);
 }
-
+html[data-bs-theme="dark"] .storage-columns span, .storage-columns p {
+    color: inherit;
+}
 .storage-columns p {
     margin-bottom: 0.5rem !important;
 }
@@ -149,3 +153,12 @@
     border-radius: 4px;
 }
 
+#current{
+    font-weight: 600;
+    font-size: 1.4rem;
+    color: black;
+    padding-left: 2px;
+}
+html[data-bs-theme="dark"] #current{
+    color: inherit;
+}
